# ecommerce-ms

./: .gitignore  LICENSE  docker-compose.override.yml  docker-compose.yml  mypy.ini  nginx.conf  ruff.toml
.github/workflows/: auth-service.yml
auth-serivce/: pyproject.toml
auth-serivce/app/core/: config.py
auth-service/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
auth-service/app/: deps.py  main.py  prestart.py
auth-service/app/alembic/: env.py
auth-service/app/alembic/versions/: 6c4e8fc0739f_userauth_model.py  948f082f7bbb_initial.py  b4259d358c46_user_model.py
auth-service/app/core/: config.py  database.py  db.py  deps.py  security.py
auth-service/app/dependencies/: auth.py  db.py  token.py  user_auth.py
auth-service/app/models/: user.py  user_auth.py
auth-service/app/repositories/: user_repository.py
auth-service/app/routers/: auth.py  health.py  user_auth.py
auth-service/app/schemas/: user_auth.py
auth-service/app/schemes/: user_auth.py
auth-service/app/services/: auth.py  token.py  user_auth.py  user_service.py
auth-service/app/tests/: conftest.py
auth-service/app/tests/repositories/: test_user_repository.py
auth-service/scripts/: prestart.sh
auth-service/tests/: conftest.py
auth-service/tests/core/: test_security.py
auth-service/tests/repositories/: test_user_auth.py
auth-service/tests/routers/: test_auth.py  test_health.py  test_user_auth.py
auth-service/tests/services/: test_user_auth.py
