[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "byteworm"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standart] (>=0.115.12,<0.116.0)",
    "sqlalchemy[mypy] (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.2,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
exclude = ["alembic"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.9"
alembic = "^1.15.2"
faker = "^37.3.0"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
